--- a/FireBaseDemo/table.html
+++ b/FireBaseDemo/table.html
@@ -140,7 +140,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-database.js"></script>
-<script type="module" src="https://qi-xiang.github.io/NCU_Project_Demo/FireBaseDemo/table.js"></script>
+<script type="module" src="src/js/table.js"></script>
 <!--<script type="module">
 	// Import the functions you need from the SDKs you need
 	import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.3/firebase-app.js";
