--- a/FireBaseDemo/user_profile.html
+++ b/FireBaseDemo/user_profile.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-TW">
 
 <head>
   <!-- Required meta tags -->
@@ -14,8 +14,8 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">NCU IoT Project 2022</a>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom: 0px">
+    <a class="navbar-brand" href="#">機車行車安全系統</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
       aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -23,18 +23,16 @@
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="#">首頁</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Sign In</a>
+          <a class="nav-link" href="#">公開統計數據</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Data Test</a>
+          <a class="nav-link" href="#">帳號登入</a>
         </li>
       </ul>
-      <span class="navbar-text">
-        Under Development by Qi Xiang &copy;
-      </span>
+      <span class="navbar-text"> Under Development by Qi Xiang &copy; </span>
     </div>
   </nav>
 
@@ -300,7 +298,7 @@
         <div id="violation_1">
 
         </div>
-      
+
       </div>
 
       <snowfall>
@@ -327,7 +325,7 @@
         <snowflake><img src="src/img/spy/05.png">️</snowflake>
         <snowflake><img src="src/img/spy/06.png">️</snowflake>
       </snowfall>
-      
+
 
 </body>
 
@@ -344,4 +342,5 @@
 <link href="src/css/user_profile.css" rel="stylesheet" />
 <link href="src/css/snowfall.css" rel="stylesheet" />
 <script type="module" src="src/js/user_profile.js"></script>
+
 </html>
