--- a/FireBaseDemo/login_seperation.html
+++ b/FireBaseDemo/login_seperation.html
@@ -32,7 +32,7 @@
                     <a class="nav-link" href="#">帳號登入</a>
                 </li>
             </ul>
-            <span class="navbar-text"> Under Development by Qi Xiang &copy; </span>
+            <span class="navbar-text"> Under Development by Qi Xiang</span>
         </div>
     </nav>
 
