--- a/FireBaseDemo/user_profile.html
+++ b/FireBaseDemo/user_profile.html
@@ -301,6 +301,20 @@
 
       </div>
 
+      <div id="speed-modal" title="詳細速度資訊" style="display:none">
+        <p>以下為詳細的速度資訊:</p>
+        <table style="border: 1px solid black;text-align: center;">
+          <tr style="border: 1px solid black;">
+            <th style="border: 1px solid black;padding: 5px;">平均速度</th>
+            <td style="border: 1px solid black;padding: 5px;" id="avg_speed">No Data!</td>
+          </tr>
+        </table>
+        <div id="violation_1">
+
+        </div>
+
+      </div>
+
       <!-- @link https://emojikopieren.de/ -->
       <!-- Add inside the flakes, whatever you like. -->
       <!--<snowfall>
