--- a/FireBaseDemo/user_profile.html
+++ b/FireBaseDemo/user_profile.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom: 0px">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">機車行車安全系統</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
       aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +32,7 @@
           <a class="nav-link" href="#">帳號登入</a>
         </li>
       </ul>
-      <span class="navbar-text"> Under Development by Qi Xiang &copy; </span>
+      <span class="navbar-text"> Under Development by Qi Xiang</span>
     </div>
   </nav>
 
@@ -352,8 +352,9 @@
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-database.js"></script>
+<!--<link href="src/css/snowfall.css" rel="stylesheet" />-->
+<script type="module" src="src/js/user_profile.min.js"></script>
 <link href="https://code.jquery.com/ui/1.13.1/themes/ui-lightness/jquery-ui.css" rel="stylesheet" />
-<link href="src/css/snowfall.css" rel="stylesheet" />
-<script type="module" src="src/js/user_profile.js"></script>
 <link href="src/css/user_profile.css" rel="stylesheet" />
+
 </html>
