--- a/FireBaseDemo/user_profile.html
+++ b/FireBaseDemo/user_profile.html
@@ -70,11 +70,11 @@
       <div class="col-lg-4 leftColumn">
         <div class="card mb-4">
           <div class="card-body text-center">
-            <img src="https://i.imgur.com/7UPqFqg.jpg" referrerpolicy="no-referrer" alt="avatar"
+            <img src="src/img/user-286.png" referrerpolicy="no-referrer" alt="avatar"
               class="rounded-circle img-fluid" style="width: 150px;">
             <h5 class="my-3 user_realName">No Data</h5>
-            <p class="text-muted mb-1">イーデン校 (一年生)</p>
-            <p class="text-muted mb-4">SPY×FAMILY</p>
+            <p class="text-muted mb-1">歡迎使用</p>
+            <p class="text-muted mb-4">機車行車安全系統</p>
             <div class="d-flex justify-content-center mb-2">
               <button type="button" class="btn btn-primary user_logout">Logout</button>
             </div>
