--- a/FireBaseDemo/user_profile.html
+++ b/FireBaseDemo/user_profile.html
@@ -72,11 +72,11 @@
           <div class="card-body text-center">
             <img src="src/img/user-286.png" referrerpolicy="no-referrer" alt="avatar"
               class="rounded-circle img-fluid" style="width: 150px;">
-            <h5 class="my-3 user_realName">No Data</h5>
+            <h5 class="my-3 user_realName">查無資料</h5>
             <p class="text-muted mb-1">歡迎使用</p>
             <p class="text-muted mb-4">機車行車安全系統</p>
             <div class="d-flex justify-content-center mb-2">
-              <button type="button" class="btn btn-primary user_logout">Logout</button>
+              <button type="button" class="btn btn-primary user_logout">登出</button>
             </div>
           </div>
         </div>
@@ -90,7 +90,7 @@
                 <p class="mb-0">帳號</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0 user_account">No Data</p>
+                <p class="text-muted mb-0 user_account">查無資料</p>
               </div>
             </div>
             <hr>
@@ -99,7 +99,7 @@
                 <p class="mb-0">生日</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0 user_birthDate">No Data</p>
+                <p class="text-muted mb-0 user_birthDate">查無資料</p>
               </div>
             </div>
             <hr>
@@ -108,7 +108,7 @@
                 <p class="mb-0">性別</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0 user_gender">No Data</p>
+                <p class="text-muted mb-0 user_gender">查無資料</p>
               </div>
             </div>
             <hr>
@@ -117,7 +117,7 @@
                 <p class="mb-0">身分證字號</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0 user_idCardNumber">No Data</p>
+                <p class="text-muted mb-0 user_idCardNumber">查無資料</p>
               </div>
             </div>
             <hr>
@@ -126,7 +126,7 @@
                 <p class="mb-0">投保的保險公司</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0 user_insuranceCompanyName">No Data</p>
+                <p class="text-muted mb-0 user_insuranceCompanyName">查無資料</p>
               </div>
             </div>
             <hr>
@@ -145,7 +145,7 @@
                 <p class="mb-0">管轄編號 (駕照)</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0 user_referenceNumber">No Data</p>
+                <p class="text-muted mb-0 user_referenceNumber">查無資料</p>
               </div>
             </div>
           </div>
@@ -158,19 +158,19 @@
         <table style="border: 1px solid black;text-align: center;">
           <tr style="border: 1px solid black;">
             <th style="border: 1px solid black;padding: 5px;">廠牌</th>
-            <td style="border: 1px solid black;padding: 5px;" id="motorcycle_brand">No Data!</td>
+            <td style="border: 1px solid black;padding: 5px;" id="motorcycle_brand">查無資料!</td>
           </tr>
           <tr style="border: 1px solid black;">
             <th style="border: 1px solid black;padding: 5px;">排氣量</th>
-            <td style="border: 1px solid black;padding: 5px;" id="motorcycle_cc">No Data!</td>
+            <td style="border: 1px solid black;padding: 5px;" id="motorcycle_cc">查無資料!</td>
           </tr>
           <tr style="border: 1px solid black;">
             <th style="border: 1px solid black;padding: 5px;">擁有者</th>
-            <td style="border: 1px solid black;padding: 5px;" id="motorcycle_owner">No Data!</td>
+            <td style="border: 1px solid black;padding: 5px;" id="motorcycle_owner">查無資料!</td>
           </tr>
           <tr style="border: 1px solid black;">
             <th style="border: 1px solid black;padding: 5px;">車牌號碼</th>
-            <td style="border: 1px solid black;padding: 5px;" id="motorcycle_plateNumber">No Data!</td>
+            <td style="border: 1px solid black;padding: 5px;" id="motorcycle_plateNumber">查無資料!</td>
           </tr>
         </table>
       </div>
@@ -245,15 +245,15 @@
         <table style="border: 1px solid black;text-align: center;">
           <tr style="border: 1px solid black;">
             <th style="border: 1px solid black;padding: 5px;">開始時間</th>
-            <td style="border: 1px solid black;padding: 5px;" id="data-journey-start">No Data!</td>
+            <td style="border: 1px solid black;padding: 5px;" id="data-journey-start">查無資料!</td>
           </tr>
           <tr style="border: 1px solid black;">
             <th style="border: 1px solid black;padding: 5px;">結束時間</th>
-            <td style="border: 1px solid black;padding: 5px;" id="data-journey-end">No Data!</td>
+            <td style="border: 1px solid black;padding: 5px;" id="data-journey-end">查無資料!</td>
           </tr>
           <tr style="border: 1px solid black;">
             <th style="border: 1px solid black;padding: 5px;">行程總時間</th>
-            <td style="border: 1px solid black;padding: 5px;" id="data-journey-totaltime">No Data!</td>
+            <td style="border: 1px solid black;padding: 5px;" id="data-journey-totaltime">查無資料!</td>
           </tr>
         </table>
       </div>
@@ -267,9 +267,9 @@
             <th style="border: 1px solid black;padding: 5px;">後方平均車距</th>
           </tr>
           <tr style="border: 1px solid black;">
-            <td style="border: 1px solid black;padding: 5px;" id="data-left-distance">No Data!</td>
-            <td style="border: 1px solid black;padding: 5px;" id="data-right-distance">No Data!</td>
-            <td style="border: 1px solid black;padding: 5px;" id="data-back-distance">No Data!</td>
+            <td style="border: 1px solid black;padding: 5px;" id="data-left-distance">查無資料!</td>
+            <td style="border: 1px solid black;padding: 5px;" id="data-right-distance">查無資料!</td>
+            <td style="border: 1px solid black;padding: 5px;" id="data-back-distance">查無資料!</td>
           </tr>
         </table>
         <div id="violation_1">
@@ -291,8 +291,8 @@
             <th style="border: 1px solid black;padding: 5px;">平均角加速度</th>
           </tr>
           <tr style="border: 1px solid black;">
-            <td style="border: 1px solid black;padding: 5px;" id="avg_acceleration">No Data!</td>
-            <td style="border: 1px solid black;padding: 5px;" id="avg_gyro">No Data!</td>
+            <td style="border: 1px solid black;padding: 5px;" id="avg_acceleration">查無資料!</td>
+            <td style="border: 1px solid black;padding: 5px;" id="avg_gyro">查無資料!</td>
           </tr>
         </table>
         <div id="violation_1">
@@ -306,7 +306,7 @@
         <table style="border: 1px solid black;text-align: center;">
           <tr style="border: 1px solid black;">
             <th style="border: 1px solid black;padding: 5px;">平均速度</th>
-            <td style="border: 1px solid black;padding: 5px;" id="avg_speed">No Data!</td>
+            <td style="border: 1px solid black;padding: 5px;" id="avg_speed">查無資料!</td>
           </tr>
         </table>
         <div id="violation_1">
