--- a/FireBaseDemo/user_profile.html
+++ b/FireBaseDemo/user_profile.html
@@ -15,7 +15,7 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">機車行車安全系統</a>
+    <a class="navbar-brand" href="#" style="color:rgb(104, 104, 104) !important;">機車行車安全系統</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
       aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -23,13 +23,13 @@
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">首頁</a>
+          <a class="nav-link" href="#" style="color:rgb(104, 104, 104) !important;">首頁</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">公開統計數據</a>
+          <a class="nav-link" href="#" style="color:rgb(104, 104, 104) !important;">公開統計數據</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">帳號登入</a>
+          <a class="nav-link" href="#" style="color:rgb(104, 104, 104) !important;">帳號登入</a>
         </li>
       </ul>
       <span class="navbar-text"> Under Development by Qi Xiang</span>
@@ -142,7 +142,7 @@
             <hr>
             <div class="row">
               <div class="col-sm-3">
-                <p class="mb-0">管轄編號 (駕照)</p>
+                <p class="mb-0">IoT編號</p>
               </div>
               <div class="col-sm-9">
                 <p class="text-muted mb-0 user_referenceNumber">查無資料</p>
@@ -353,7 +353,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-database.js"></script>
 <!--<link href="src/css/snowfall.css" rel="stylesheet" />-->
-<script type="module" src="src/js/user_profile.js"></script>
+<script type="module" src="src/js/user_profile.min.js"></script>
 <link href="https://code.jquery.com/ui/1.13.1/themes/ui-lightness/jquery-ui.css" rel="stylesheet" />
 <link href="src/css/user_profile.css" rel="stylesheet" />
 
