--- a/FireBaseDemo/InsuranceCompany.html
+++ b/FireBaseDemo/InsuranceCompany.html
@@ -39,8 +39,9 @@
 
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-4">國泰人壽</h1>
-            <p class="lead">大樹為您撐傘，讓人生總是好天氣。</p>
+            <h1 class="display-4 companyName">載入中...</h1>
+            <p class="lead companySlogan">歡迎使用機車安全系統</p>
+            <a class="btn btn-primary btn-sm logout_btn" href="#" role="button">登出</a>
         </div>
     </div>
 
