--- a/FireBaseDemo/insuranceCompany_UserProfile.html
+++ b/FireBaseDemo/insuranceCompany_UserProfile.html
@@ -40,7 +40,7 @@
   <div class="container-fluid py-5" style="padding-bottom: 0px !important;">
     <div class="row" style="display: none;">
       <div class="col">
-        
+       
       </div>
     </div>
 
@@ -54,7 +54,7 @@
             <p class="text-muted mb-1">歡迎使用</p>
             <p class="text-muted mb-4">機車行車安全系統</p>
             <div class="d-flex justify-content-center mb-2">
-              <button type="button" class="btn btn-primary user_logout">登出</button>
+              <button type="button" class="btn btn-primary user_logout" style="display: none;">登出</button>
             </div>
           </div>
         </div>
@@ -136,19 +136,19 @@
         <table style="border: 1px solid black;text-align: center;">
           <tr style="border: 1px solid black;">
             <th style="border: 1px solid black;padding: 5px;">廠牌</th>
-            <td style="border: 1px solid black;padding: 5px;" id="motorcycle_brand">查無資料</td>
+            <td style="border: 1px solid black;padding: 5px;" id="motorcycle_brand">查無資料!</td>
           </tr>
           <tr style="border: 1px solid black;">
             <th style="border: 1px solid black;padding: 5px;">排氣量</th>
-            <td style="border: 1px solid black;padding: 5px;" id="motorcycle_cc">查無資料</td>
+            <td style="border: 1px solid black;padding: 5px;" id="motorcycle_cc">查無資料!</td>
           </tr>
           <tr style="border: 1px solid black;">
             <th style="border: 1px solid black;padding: 5px;">擁有者</th>
-            <td style="border: 1px solid black;padding: 5px;" id="motorcycle_owner">查無資料</td>
+            <td style="border: 1px solid black;padding: 5px;" id="motorcycle_owner">查無資料!</td>
           </tr>
           <tr style="border: 1px solid black;">
             <th style="border: 1px solid black;padding: 5px;">車牌號碼</th>
-            <td style="border: 1px solid black;padding: 5px;" id="motorcycle_plateNumber">查無資料</td>
+            <td style="border: 1px solid black;padding: 5px;" id="motorcycle_plateNumber">查無資料!</td>
           </tr>
         </table>
       </div>
@@ -196,15 +196,15 @@
         <table style="border: 1px solid black;text-align: center;">
           <tr style="border: 1px solid black;">
             <th style="border: 1px solid black;padding: 5px;">開始時間</th>
-            <td style="border: 1px solid black;padding: 5px;" id="data-journey-start">查無資料</td>
+            <td style="border: 1px solid black;padding: 5px;" id="data-journey-start">查無資料!</td>
           </tr>
           <tr style="border: 1px solid black;">
             <th style="border: 1px solid black;padding: 5px;">結束時間</th>
-            <td style="border: 1px solid black;padding: 5px;" id="data-journey-end">查無資料</td>
+            <td style="border: 1px solid black;padding: 5px;" id="data-journey-end">查無資料!</td>
           </tr>
           <tr style="border: 1px solid black;">
             <th style="border: 1px solid black;padding: 5px;">行程總時間</th>
-            <td style="border: 1px solid black;padding: 5px;" id="data-journey-totaltime">查無資料</td>
+            <td style="border: 1px solid black;padding: 5px;" id="data-journey-totaltime">查無資料!</td>
           </tr>
         </table>
       </div>
@@ -218,9 +218,9 @@
             <th style="border: 1px solid black;padding: 5px;">後方平均車距</th>
           </tr>
           <tr style="border: 1px solid black;">
-            <td style="border: 1px solid black;padding: 5px;" id="data-left-distance">查無資料</td>
-            <td style="border: 1px solid black;padding: 5px;" id="data-right-distance">查無資料</td>
-            <td style="border: 1px solid black;padding: 5px;" id="data-back-distance">查無資料</td>
+            <td style="border: 1px solid black;padding: 5px;" id="data-left-distance">查無資料!</td>
+            <td style="border: 1px solid black;padding: 5px;" id="data-right-distance">查無資料!</td>
+            <td style="border: 1px solid black;padding: 5px;" id="data-back-distance">查無資料!</td>
           </tr>
         </table>
         <div id="violation_1">
@@ -242,8 +242,8 @@
             <th style="border: 1px solid black;padding: 5px;">平均角加速度</th>
           </tr>
           <tr style="border: 1px solid black;">
-            <td style="border: 1px solid black;padding: 5px;" id="avg_acceleration">查無資料</td>
-            <td style="border: 1px solid black;padding: 5px;" id="avg_gyro">查無資料</td>
+            <td style="border: 1px solid black;padding: 5px;" id="avg_acceleration">查無資料!</td>
+            <td style="border: 1px solid black;padding: 5px;" id="avg_gyro">查無資料!</td>
           </tr>
         </table>
         <div id="violation_1">
@@ -257,7 +257,7 @@
         <table style="border: 1px solid black;text-align: center;">
           <tr style="border: 1px solid black;">
             <th style="border: 1px solid black;padding: 5px;">平均速度</th>
-            <td style="border: 1px solid black;padding: 5px;" id="avg_speed">查無資料</td>
+            <td style="border: 1px solid black;padding: 5px;" id="avg_speed">查無資料!</td>
           </tr>
         </table>
         <div id="violation_1">
@@ -304,7 +304,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-database.js"></script>
 <!--<link href="src/css/snowfall.css" rel="stylesheet" />-->
-<script type="module" src="src/js/user_profile.js"></script>
+<script type="module" src="src/js/user_profile.min.js"></script>
 <link href="https://code.jquery.com/ui/1.13.1/themes/ui-lightness/jquery-ui.css" rel="stylesheet" />
 <link href="src/css/user_profile.css" rel="stylesheet" />
 
