--- a/FireBaseDemo/resetPassword.html
+++ b/FireBaseDemo/resetPassword.html
@@ -86,7 +86,7 @@
               <div class="contact100-form-checkbox"></div>
 
               <div>
-                <a href="index.html" class="txt1"> 登入 </a>
+                <a href="userLogin.html" class="txt1"> 返回登入 </a>
               </div>
             </div>
 
@@ -152,9 +152,9 @@
       auth
         .sendPasswordResetEmail(email.value)
         .then(function () {
-          window.alert("已發送信件至信箱，請按照信件說明重設密碼");
+          window.alert("已發送郵件到信箱，請按照郵件說明重設密碼!");
           window.location.reload(); // 送信後，強制頁面重整一次
-          window.location = "index.html";
+          window.location = "userLogin.html";
         })
         .catch(function (error) {
           console.log(error.message);
