--- a/FireBaseDemo/signup.html
+++ b/FireBaseDemo/signup.html
@@ -57,7 +57,7 @@
 						</div>
 
 						<div>
-							<a href="index.html" class="txt1">
+							<a href="userLogin.html" class="txt1">
 								Sign In
 							</a>
 						</div>
@@ -135,7 +135,7 @@
         .then(()=>{
             console.log('註冊成功')
             alert('註冊成功，跳轉回登入頁面');
-            window.location = 'index.html';
+            window.location = 'userLogin.html';
         })
         .catch((error) => {
             console.log(error.message);
