--- a/FireBaseDemo/userLogin.html
+++ b/FireBaseDemo/userLogin.html
@@ -60,9 +60,9 @@
 						</div>
 
 						<div>
-							<a href="signup.html" class="txt1">
+							<!--<a href="signup.html" class="txt1">
 								註冊 /
-							</a>
+							</a>-->
 							<a href="resetPassword.html" class="txt1">
 								忘記密碼?
 							</a>
