--- a/FireBaseDemo/login_seperation.html
+++ b/FireBaseDemo/login_seperation.html
@@ -58,7 +58,7 @@
                         <p class="card-text">
                             若您為機車用戶欲使用本系統查詢行車數據，請由此登入。
                         </p>
-                        <a href="index.html" class="btn btn-primary">前往登入頁</a>
+                        <a href="userLogin.html" class="btn btn-primary">前往登入頁</a>
                     </div>
                 </div>
             </div>
