--- a/FireBaseDemo/InsuranceCompany.html
+++ b/FireBaseDemo/InsuranceCompany.html
@@ -81,7 +81,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-database.js"></script>
-    <script type="module" src="src/js/insurance_company.js"></script>
+    <script type="module" src="src/js/min_js/insurance_company.min.js"></script>
     <link rel="stylesheet" href="src/css/insurance_company.css">
     </link>
 </body>
