--- a/FireBaseDemo/user_profile.html
+++ b/FireBaseDemo/user_profile.html
@@ -40,7 +40,7 @@
   <div class="container-fluid py-5" style="padding-bottom: 0px !important;">
     <div class="row" style="display: none;">
       <div class="col">
-        
+
       </div>
     </div>
 
@@ -48,8 +48,8 @@
       <div class="col-lg-4 leftColumn">
         <div class="card mb-4">
           <div class="card-body text-center">
-            <img src="src/img/user-286.png" referrerpolicy="no-referrer" alt="avatar"
-              class="rounded-circle img-fluid" style="width: 150px;">
+            <img src="src/img/user-286.png" referrerpolicy="no-referrer" alt="avatar" class="rounded-circle img-fluid"
+              style="width: 150px;">
             <h5 class="my-3 user_realName">查無資料</h5>
             <p class="text-muted mb-1">歡迎使用</p>
             <p class="text-muted mb-4">機車行車安全系統</p>
@@ -167,7 +167,7 @@
             </tr>
           </thead>
           <tbody class="journey-table-tbody">
-          
+
           </tbody>
         </table>
       </div>
@@ -293,7 +293,6 @@
 
 
 </body>
-
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"
@@ -304,7 +303,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-database.js"></script>
 <!--<link href="src/css/snowfall.css" rel="stylesheet" />-->
-<script type="module" src="src/js/user_profile.js"></script>
+<script type="module" src="src/js/min_js/user_profile.min.js"></script>
 <link href="https://code.jquery.com/ui/1.13.1/themes/ui-lightness/jquery-ui.css" rel="stylesheet" />
 <link href="src/css/user_profile.css" rel="stylesheet" />
 
