--- a/FireBaseDemo/resetPassword.html
+++ b/FireBaseDemo/resetPassword.html
@@ -119,47 +119,5 @@
   <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js"></script>
-  <script type="module">
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.3/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.8.3/firebase-analytics.js";
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    const firebaseConfig = {
-      apiKey: "AIzaSyDhopMw0xE4aJUe9h3IKaSQwqXnXTh0VNI",
-      authDomain: "test-project-466ef.firebaseapp.com",
-      databaseURL:
-        "https://test-project-466ef-default-rtdb.asia-southeast1.firebasedatabase.app",
-      projectId: "test-project-466ef",
-      storageBucket: "test-project-466ef.appspot.com",
-      messagingSenderId: "340502449931",
-      appId: "1:340502449931:web:227469eb8fd238a1261c0e",
-      measurementId: "G-XF04WLWC83",
-    };
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-
-    var email = document.getElementById("Email");
-    var ResetBtn = document.getElementById("ResetBtn");
-
-    ResetBtn.addEventListener("click", function (e) {
-      e.preventDefault();
-      const auth = firebase.auth();
-      auth
-        .sendPasswordResetEmail(email.value)
-        .then(function () {
-          window.alert("已發送郵件到信箱，請按照郵件說明重設密碼!");
-          window.location.reload(); // 送信後，強制頁面重整一次
-          window.location = "userLogin.html";
-        })
-        .catch(function (error) {
-          console.log(error.message);
-          alert(error.message);
-        });
-    });
-  </script>
+  <script type="module" src="src/js/min_js/resetPassword.min.js"></script>
 </html>
