--- a/FireBaseDemo/insuranceCompany_UserProfile.html
+++ b/FireBaseDemo/insuranceCompany_UserProfile.html
@@ -291,6 +291,12 @@
         <snowflake><img src="src/img/spy/06.png">️</snowflake>
       </snowfall>-->
 
+      <!-- Loading square for squar.red network -->
+      <div class="loader-wrapper">
+        <p class="loader-txt">資料載入中...</p><br>
+        <p><span class="loader"><span class="loader-inner"></span></span></p>    
+      </div>
+
 
 </body>
 
