--- a/FireBaseDemo/user_profile.html
+++ b/FireBaseDemo/user_profile.html
@@ -291,8 +291,16 @@
         <snowflake><img src="src/img/spy/06.png">️</snowflake>
       </snowfall>-->
 
+      <!-- Loading square for squar.red network -->
+      <div class="loader-wrapper">
+        <p class="loader-txt">資料載入中...</p><br>
+        <p><span class="loader"><span class="loader-inner"></span></span></p>    
+      </div>
+
+
 
 </body>
+<link href="src/css/loader.css" rel="stylesheet" />
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"
@@ -306,5 +314,7 @@
 <script type="module" src="src/js/min_js/user_profile.min.js"></script>
 <link href="https://code.jquery.com/ui/1.13.1/themes/ui-lightness/jquery-ui.css" rel="stylesheet" />
 <link href="src/css/user_profile.css" rel="stylesheet" />
-
+<script>
+ 
+</script>
 </html>
