--- a/FireBaseDemo/InsuranceCompany.html
+++ b/FireBaseDemo/InsuranceCompany.html
@@ -66,11 +66,12 @@
         </div>
     </div>
 
-
-
-
-
-
+    <!-- Loading square for squar.red network -->
+    <div class="loader-wrapper">
+        <p class="loader-txt">資料載入中...</p><br>
+        <p><span class="loader"><span class="loader-inner"></span></span></p>
+    </div>
+    <link href="src/css/loader.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
