--- a/FireBaseDemo/InsuranceCompany.html
+++ b/FireBaseDemo/InsuranceCompany.html
@@ -71,6 +71,7 @@
         <p class="loader-txt">資料載入中...</p><br>
         <p><span class="loader"><span class="loader-inner"></span></span></p>
     </div>
+
     <link href="src/css/loader.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -82,9 +83,10 @@
     <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-database.js"></script>
+    <link rel="stylesheet" href="src/css/insurance_company.css"></link>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="module" src="src/js/min_js/insurance_company.min.js"></script>
-    <link rel="stylesheet" href="src/css/insurance_company.css">
-    </link>
 </body>
 
 </html>
