--- a/FireBaseDemo/user_profile.html
+++ b/FireBaseDemo/user_profile.html
@@ -206,6 +206,10 @@
             <th style="border: 1px solid black;padding: 5px;">行程總時間</th>
             <td style="border: 1px solid black;padding: 5px;" id="data-journey-totaltime">查無資料</td>
           </tr>
+          <tr style="border: 1px solid black;">
+            <th style="border: 1px solid black;padding: 5px;">安全分數</th>
+            <td style="border: 1px solid black;padding: 5px;" id="data-journey-safetyScore">查無資料</td>
+          </tr>
         </table>
       </div>
 
