--- a/FireBaseDemo/dataVisualization.html
+++ b/FireBaseDemo/dataVisualization.html
@@ -6,31 +6,90 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 </head>
 
 <body>
 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#" style="color:rgb(104, 104, 104) !important;">機車行車安全系統</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#" style="color:rgb(104, 104, 104) !important;">首頁</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" style="color:rgb(104, 104, 104) !important;">公開統計數據</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#" style="color:rgb(104, 104, 104) !important;">帳號登入</a>
+                </li>
+            </ul>
+            <span class="navbar-text"> Under Development by Qi Xiang</span>
+        </div>
+    </nav>
+
     <div class="container d-flex justify-content-center py-5">
         <nav aria-label="Page navigation example">
             <ul class="pagination">
-              <li class="page-item"><a class="page-link lastBtn" href="#">&laquo; 上10筆</a></li>
-              <li class="page-item"><a class="page-link disabled" href="#">平均速度折線圖</a></li>
-              <li class="page-item"><a class="page-link nextBtn" href="#">下10筆 &raquo;</a></li>
+                <li class="page-item"><a class="page-link lastBtn" href="#">&laquo; 上10筆</a></li>
+                <li class="page-item"><a class="page-link disabled">資料視覺化圖表</a></li>
+                <li class="page-item"><a class="page-link nextBtn" href="#">下10筆 &raquo;</a></li>
             </ul>
-          </nav>
+        </nav>
     </div>
 
-    <div class="container d-flex justify-content-center">
-        <div id="chart"></div>
+    <div class="container d-flex justify-content-center" style="overflow-x: auto;">
+        <div id="chart" style="width: 100%;"></div>
+    </div>
+
+    <div class="container d-flex justify-content-center" style="overflow-x: auto;">
+        <div id="chart3" style="width: 100%;"></div>
+    </div>
+
+    <div class="container d-flex justify-content-center" style="overflow-x: auto;">
+        <div id="chart2" style="width: 100%;"></div>
+    </div>
+
+    <div class="container d-flex justify-content-center" style="overflow-x: auto;">
+        <div id="chart4" style="width: 100%;"></div>
+    </div>
+
+    <div class="container d-flex justify-content-center" style="overflow-x: auto;">
+        <div id="chart5" style="width: 100%;"></div>
+    </div>
+
+    <div class="container d-flex justify-content-center" style="overflow-x: auto;">
+        <div id="chart6" style="width: 100%;"></div>
+    </div>
+
+    <div class="container py-1">
+        <!-- Footer -->
+        <footer class="page-footer font-small">
+            <!-- Copyright -->
+            <div class="footer-copyright text-center py-3">© 2022 Copyright:
+                <a href="https://qi-xiang.github.io/">Qi Xiang</a>
+            </div>
+            <!-- Copyright -->
+        </footer>
+        <!-- Footer -->
     </div>
 
 
 </body>
 <!-- Load c3.css -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.18/c3.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+    crossorigin="anonymous"></script>
 <!-- Load d3.js and c3.js -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.18/c3.js"></script>
@@ -44,20 +103,25 @@
         font-family: NotoSansTC-Regular;
         src: url(src/font/NotoSansTC-Regular.otf);
     }
-    #chart .c3-axis-y-label {
+
+    .c3-axis-y-label {
         font-size: 12px;
         font-family: NotoSansTC-Regular;
     }
-    #chart .c3-axis-x-label{
+
+    .c3-axis-x-label {
         font-size: 12px;
         font-family: NotoSansTC-Regular;
     }
+
     body {
         font-family: NotoSansTC-Regular;
     }
-   
-  
 
+    .c3-tooltip {
+        box-shadow: none;
+        width: 150px;
+    }
 </style>
 
 </html>
