--- a/FireBaseDemo/login_seperation.html
+++ b/FireBaseDemo/login_seperation.html
@@ -38,7 +38,19 @@
 
     <div class="container-fluid">
         <div class="row d-flex justify-content-center">
-            <div class="col-12 col-md-6 col-xl-3 d-flex justify-content-center" style="margin-bottom: 40px">
+            <div class="col-12 col-md-4 col-xl-3 d-flex justify-content-center" style="margin-bottom: 40px">
+                <div class="card" style="width: 18rem">
+                    <img src="src/img/yor_forger.jpg" class="card-img-top" alt="..." />
+                    <div class="card-body text-center">
+                        <h5 class="card-title">政府機關登入</h5>
+                        <p class="card-text">
+                            若您為政府機關欲使用本系統查詢用戶行車數據，請由此登入。
+                        </p>
+                        <a href="Government_login.html" class="btn btn-primary">前往登入頁</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 col-xl-3 d-flex justify-content-center" style="margin-bottom: 40px">
                 <div class="card" style="width: 18rem">
                     <img src="src/img/elegent.jpg" class="card-img-top" alt="..." />
                     <div class="card-body text-center">
@@ -50,7 +62,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-xl-3 d-flex justify-content-center" style="margin-bottom: 40px">
+            <div class="col-12 col-md-4 col-xl-3 d-flex justify-content-center" style="margin-bottom: 40px">
                 <div class="card" style="width: 18rem">
                     <img src="src/img/anya.jpg" class="card-img-top" alt="..." />
                     <div class="card-body text-center">
@@ -64,6 +76,8 @@
             </div>
         </div>
     </div>
+
+    
 
     <div class="container py-1">
         <!-- Footer -->
