--- a/FireBaseDemo/InsuranceCompany.html
+++ b/FireBaseDemo/InsuranceCompany.html
@@ -66,6 +66,18 @@
         </div>
     </div>
 
+    <div class="container py-1">
+        <!-- Footer -->
+        <footer class="page-footer font-small">
+            <!-- Copyright -->
+            <div class="footer-copyright text-center py-3">© 2022 Copyright:
+                <a href="https://qi-xiang.github.io/">Qi Xiang</a>
+            </div>
+            <!-- Copyright -->
+        </footer>
+        <!-- Footer -->
+    </div>
+
     <!-- Loading square for squar.red network -->
     <div class="loader-wrapper">
         <p class="loader-txt">資料載入中...</p><br>
@@ -83,10 +95,26 @@
     <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-database.js"></script>
-    <link rel="stylesheet" href="src/css/insurance_company.css"></link>
+    <link rel="stylesheet" href="src/css/insurance_company.css">
+    </link>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script type="module" src="src/js/insurance_company.js"></script>
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script type="module" src="src/js/min_js/insurance_company.min.js"></script>
 </body>
+
+<style>
+    a:hover {
+        cursor: pointer;
+    }
+
+    div#nav {
+        display: flex;
+        justify-content: center;
+    }
+
+    div#nav a.active {
+        background-color: #d1d1d1;
+    }
+</style>
 
 </html>
