--- a/FireBaseDemo/insuranceCompany_UserProfile.html
+++ b/FireBaseDemo/insuranceCompany_UserProfile.html
@@ -382,6 +382,6 @@
 <script type="module" src="src/js/min_js/user_profile.min.js"></script>
 <link href="https://code.jquery.com/ui/1.13.1/themes/ui-lightness/jquery-ui.css" rel="stylesheet" />
 <link href="src/css/user_profile.css" rel="stylesheet" />
-<script type="module" src="src/js/dataVisualization.js"></script>
+<script type="module" src="src/js/min_js/dataVisualization.min.js"></script>
 
 </html>
