--- a/FireBaseDemo/insuranceCompany_UserProfile.html
+++ b/FireBaseDemo/insuranceCompany_UserProfile.html
@@ -259,7 +259,8 @@
             <li class="disabled" style="margin: 0 5px 0 5px;">
               <div class="dropdown dropdownContainer">
                 <a class="page-link btn btn-secondary dropdown-toggle" role="button" data-toggle="dropdown"
-                  aria-expanded="false">
+                  aria-expanded="false" data-toggle2="tooltip" data-placement="top"
+                  title="請選擇資料類型">
                   平均速度
                 </a>
                 <div class="dropdown-menu">
@@ -383,5 +384,4 @@
 <link href="https://code.jquery.com/ui/1.13.1/themes/ui-lightness/jquery-ui.css" rel="stylesheet" />
 <link href="src/css/user_profile.css" rel="stylesheet" />
 <script type="module" src="src/js/min_js/dataVisualization.min.js"></script>
-
 </html>
