--- a/FireBaseDemo/user_profile.html
+++ b/FireBaseDemo/user_profile.html
@@ -5,7 +5,6 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
     integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -154,8 +153,8 @@
       </div>
 
       <div class="container-fluid">
-        
-        
+
+
       </div>
 
       <div class="table-responsive" style="padding: 0 3% 0 3%;">
@@ -182,7 +181,8 @@
             <li class="disabled" style="margin: 0 5px 0 5px;">
               <div class="dropdown dropdownContainer">
                 <a class="page-link btn btn-secondary dropdown-toggle" role="button" data-toggle="dropdown"
-                  aria-expanded="false">
+                  aria-expanded="false" data-toggle2="tooltip" data-placement="top"
+                  title="請選擇資料類型">
                   平均速度
                 </a>
                 <div class="dropdown-menu">
@@ -362,7 +362,6 @@
       </div>
 
 
-
 </body>
 <link href="src/css/loader.css" rel="stylesheet" />
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
@@ -382,9 +381,8 @@
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-database.js"></script>
 <!--<link href="src/css/snowfall.css" rel="stylesheet" />-->
+<link href="src/css/user_profile.css" rel="stylesheet" />
 <script type="module" src="src/js/min_js/user_profile.min.js"></script>
 <link href="https://code.jquery.com/ui/1.13.1/themes/ui-lightness/jquery-ui.css" rel="stylesheet" />
-<link href="src/css/user_profile.css" rel="stylesheet" />
 <script type="module" src="src/js/min_js/dataVisualization.min.js"></script>
-
 </html>
