--- a/FireBaseDemo/user_profile.html
+++ b/FireBaseDemo/user_profile.html
@@ -174,7 +174,7 @@
         </table>
       </div>
 
-      <div class="container d-flex justify-content-center py-5">
+      <div class="container d-flex justify-content-center py-5 graph-selection-container">
         <nav aria-label="Page navigation example">
           <ul class="pagination">
             <li class="page-item"><a class="page-link lastBtn">&laquo; 上10筆</a></li>
